--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="message"></div>
     <button id="start-button">Start Game<br>(Enter)</button>
 
-    <footer class="footer">Made by KachraJoD ❤️!</footer>
+    <footer class="footer">Made for KachraJoD ❤️!</footer>
 
     <script>
         // Available characters
@@ -164,12 +164,12 @@ function getRandomCharacter(previousCharacter) {
             }
 
             if (isWin) {
-                messageEl.textContent = 'Success!';
+                messageEl.textContent = 'JODD!';
             } else {
                 if (isTimeout) {
-                    messageEl.textContent = 'Failed!';
+                    messageEl.textContent = 'NHK!';
                 } else {
-                    messageEl.textContent = 'Failed!';
+                    messageEl.textContent = 'NHK!';
                 }
             }
 
